<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:keepScreenOn="true"
    tools:context=".NotificationPushConfigActivity">

    <RelativeLayout
        android:id="@+id/rl_container_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:padding="3dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_notification"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dip"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:src="@drawable/baseline_help_24" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_container_header"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_container_notification_push"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/ripple_effect"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/summery_notification"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_state_notification_push"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:text="@string/state_disabled"
                android:textColor="@color/blue_sky"
                android:textSize="18dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/label_app_list"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@color/gray_700" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_control_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_pkg_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_select_default" />

                <Button
                    android:id="@+id/btn_pkg_select_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_select_all" />

                <Button
                    android:id="@+id/btn_pkg_unselect_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_unselect_all" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_app"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/ll_control_container"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>