<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:keepScreenOn="true"
    tools:context=".ExhibitActivity">

    <RelativeLayout
        android:id="@+id/rl_container_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:padding="3dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_device_demo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25dip"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:src="@drawable/baseline_help_24" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_container_current"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/rl_container_header"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/iv_current"
            android:layout_width="320dp"
            android:layout_height="240dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_current"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/demo_current"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_container_current"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/demo_list"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_exhibit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="3dp" />
    </LinearLayout>
</RelativeLayout>